Tests print cause of skip
Until now, when the necessary conditions (executable file or input images)
of a test were not present, it would just return a skip value. So it was
not clear why the test is being skipped in the `test-suite.log' file.

So with this commit, if any input condition is not present, before
returning a skip value and exiting, it is going to emit a message of what
is missing.

Thanks to a report by Boud Roukema, we found that the
`buildprog/simpleio.c' file that was an input to the
`buildprog/simpleio.sh' test was not being distributed in the tarball. This
has been corrected with this commit.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -224,10 +224,10 @@ TESTS = prepconf.sh lib/versioncpp.sh lib/multithread.sh                   \
 
 
 # Files to distribute along with the tests.
-EXTRA_DIST = $(TESTS) during-dev.sh mkprof/mkprofcat1.txt                 \
-  mkprof/ellipticalmasks.txt mkprof/clearcanvas.txt mkprof/mkprofcat2.txt \
-  mkprof/mkprofcat3.txt mkprof/mkprofcat4.txt mkprof/radeccat.txt         \
-  crop/cat.txt table/table.txt
+EXTRA_DIST = $(TESTS) during-dev.sh buildprog/simpleio.c crop/cat.txt     \
+  mkprof/mkprofcat1.txt mkprof/ellipticalmasks.txt mkprof/clearcanvas.txt \
+  mkprof/mkprofcat2.txt mkprof/mkprofcat3.txt mkprof/mkprofcat4.txt       \
+  mkprof/radeccat.txt table/table.txt
 
 
 
