Corrected comments in configuration files
The configuration file comments had not been updated since the updating of
the option management system. So with this commit, it was re-written and
copied/used for all the programs. The end of the top description of
`--help' is also updated with the suggested command descriptions listed on
the same line as the command.

In ConvertType, I noticed that `p->quality' (which accepts a value between
0 and 100) is being initialized with `UINT8_MAX' (because 0 is a valid
value for it). But this value is only meant as a blank value (to identify
if the option is actually given). So to be more clear, it is replaced with
`GAL_BLANK_UINT8'.

--- a/bin/mkcatalog/astmkcatalog.conf
+++ b/bin/mkcatalog/astmkcatalog.conf
@@ -1,21 +1,21 @@
 # Default parameters (System) for MakeCatalog.
 # MakeCatalog is part of GNU Astronomy Utitlies.
 #
-# Use the long option name of each paramter followed by
-# a value. The name and value should be separated by
-# atleast one of the following charaacters:
-# space, `,`, `=` or `:`
+# Use the long option name of each parameter followed by a value. The name
+# and value should be separated by atleast one white-space character (for
+# example ` '[space], or tab). Lines starting with `#' are ignored.
 #
-# Run with `--help` option or read the manual for a full
-# explanation of what each option means.
+# For more information, please run these commands:
 #
-# NOTE I:  All counting is from zero, not one.
-# NOTE II: Lines starting with `#` are ignored.
+#  $ astmkcatalog --help                 # Full list of options, short doc.
+#  $ astmkcatalog -P                     # Print all options and used values.
+#  $ info astmkcatalog                   # All options and input/output.
+#  $ info gnuastro "Configuration files" # How to use configuration files.
 #
-# Copying and distribution of this file, with or without modification,
-# are permitted in any medium without royalty provided the copyright
-# notice and this notice are preserved.  This file is offered as-is,
-# without any warranty.
+# Copying and distribution of this file, with or without modification, are
+# permitted in any medium without royalty provided the copyright notice and
+# this notice are preserved.  This file is offered as-is, without any
+# warranty.
 
 # Input:
  hdu                1
