Corrected BuildProgram doc pointers in info and Man
The node name for BuildProgram's Invoking section was still unchanged from
its first version (`astcompilerun'). This would not allow `info
astbuildprog' to work properly. The node name is now corrected to `Invoking
astbuildprog'.

When Info couldn't find any menu item for `astbuildprog' it would look in
the Man-pages, but I noticed that it is bringing up the ConvertType Man
page instead! This was because of a mistake in creating of the Man-pages
which is now also corrected.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -154,7 +154,7 @@ man/astarithmetic.1: $(top_srcdir)/bin/arithmetic/args.h  $(ALLMANSDEP)
 
 man/astbuildprog.1: $(top_srcdir)/bin/buildprog/args.h  $(ALLMANSDEP)
 	$(MAYBE_HELP2MAN) -n "compile, link with Gnuastro library and its dependencies, and run a C program"      \
-	                  --libtool $(toputildir)/convertt/astconvertt
+	                  --libtool $(toputildir)/buildprog/astbuildprog
 
 man/astconvertt.1: $(top_srcdir)/bin/convertt/args.h  $(ALLMANSDEP)
 	$(MAYBE_HELP2MAN) -n "convert known data types to each other"      \
