BuildProgram with Debug, Optimization and Warning options
Besides raw compilation, it is sometimes necessary to write compile with
debugging or optimization. Also, it is good practice to allow for warning
messages. So BuildProgram now accepts these options and will pass them onto
Libtool (and the compiler).

--- a/bin/buildprog/astbuildprog.conf
+++ b/bin/buildprog/astbuildprog.conf
@@ -16,3 +16,8 @@
 # permitted in any medium without royalty provided the copyright notice and
 # this notice are preserved.  This file is offered as-is, without any
 # warranty.
+
+
+# Output
+ optimize    3
+ warning     all
