MakeCatalog repots surface brightness in mag/arcsec squared
Until now, MakeCatalog would only print the dataset's surface brightness in
units of magnitudes/pixel. But that is not nicely comparable to other
datasets. Hence, using a simple calculation (from the pixel size), it now
also reports the surface brightness in magnitudes/arcsec^2 also.

The documentation has also been updated to fully describe this derivation.

IMPORTANT: MakeCatalog's `--nsigmag' option is now `--sfmagnsigma'.

--- a/bin/mkcatalog/astmkcatalog.conf
+++ b/bin/mkcatalog/astmkcatalog.conf
@@ -27,7 +27,8 @@
  skysubtracted      0
 
 # Output:
- nsigmag            1
+ sfmagnsigma        1
+ sfmagarea          1
 
 # Upper limit magnitude:
  upnum            100
