Unified options used for single crop from center
Until now, if you wanted to crop a region around the pixel (A,B) in an
image with Crop, you had to use `--xc=A --yc=B'. On the other hand, if you
wanted to a crop around the RA and Dec of (R,D), you have to use `--ra=R
--dec=D'. Each standard also has its own separate option to specify the
width: `--iwidth' and `--wwidth'. In parallel, Crop also has the `--mode'
option to specify the coordinate standard (for cases like `--polygon',
where only one option is used for both standards).

This can all be confusing, just adds to the number of options (makes things
harder for the user) and also makes maintaining Crop harder. The main
reason for this is historical: Crop is Gnuastro's first program, so I
wasn't too experience and all these options grew very gradually.

This commit addresses these issues as described below. Since these changes
were significant, they have also been included in the NEWS file so users
downloading the source before the 0.4 version can be aware of these major
changes in an old program.

  The new `--width' option is now used to define the width of a single
  crop. Hence the old `--iwidth', `--wwidth' were removed. The units to
  interpret the value to the option are specified by the `--mode'
  option. With the new `--width' option it is also possible to define a
  non-square crop (different widths along each dimension). In WCS mode, its
  units are no longer arcseconds but are the same units of the WCS (degrees
  for angles). `--width' can also accept fractions. So to set a width of 5
  arcseconds, you can give it a value of `5/3600' for the angular
  dimensions.

  The new `--center' option is now used to define the center of a single
  crop. Hence the old `--ra', `--dec', `--xc', `--yc' have been
  removed. This new option can take multiple values (one value for each
  dimension). Fractions are also acceptable.

  The new `--coordcol' option is now used to determine the catalog columns
  that defin

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -87,18 +87,18 @@ if COND_COSMICCAL
   cosmiccal/simpletest.sh: prepconf.sh.log
 endif
 if COND_CROP
-  MAYBE_CROP_TESTS = crop/imgcat.sh crop/wcscat.sh crop/xcyc.sh		\
-  crop/xcycnoblank.sh crop/section.sh crop/radec.sh crop/imgpolygon.sh	\
-  crop/imgoutpolygon.sh crop/wcspolygon.sh
+  MAYBE_CROP_TESTS = crop/imgcat.sh crop/wcscat.sh crop/imgcenter.sh	\
+  crop/imgcenternoblank.sh crop/section.sh crop/wcscenter.sh		\
+  crop/imgpolygon.sh crop/imgoutpolygon.sh crop/wcspolygon.sh
 
   crop/imgcat.sh: mkprof/mosaic1.sh.log
   crop/wcscat.sh: mkprof/mosaic1.sh.log mkprof/mosaic2.sh.log     \
                   mkprof/mosaic3.sh.log mkprof/mosaic4.sh.log
-  crop/xcyc.sh: mkprof/mosaic1.sh.log
-  crop/xcycnoblank.sh: mkprof/mosaic1.sh.log
+  crop/imgcenter.sh: mkprof/mosaic1.sh.log
+  crop/imgcenternoblank.sh: mkprof/mosaic1.sh.log
   crop/section.sh: mkprof/mosaic1.sh.log
-  crop/radec.sh: mkprof/mosaic1.sh.log mkprof/mosaic2.sh.log      \
-                 mkprof/mosaic3.sh.log mkprof/mosaic4.sh.log
+  crop/wcscenter.sh: mkprof/mosaic1.sh.log mkprof/mosaic2.sh.log      \
+                     mkprof/mosaic3.sh.log mkprof/mosaic4.sh.log
   crop/imgpolygon.sh: mkprof/mosaic1.sh.log
   crop/imgoutpolygon.sh: mkprof/mosaic1.sh.log
   crop/wcspolygon.sh: mkprof/mosaic1.sh.log mkprof/mosaic2.sh.log \
