--- a/bin/mkprof/astmkprof.conf
+++ b/bin/mkprof/astmkprof.conf
@@ -18,38 +18,36 @@
 # warranty.
 
 #input
- backhdu               1
+ backhdu                   1
 
 # Output:
- naxis1             1000
- naxis2             1000
- oversample            5
- circumwidth           2
- type            float32
+ naxis             1000,1000
+ oversample                5
+ circumwidth               2
+ type                float32
 
 # Profiles:
- tunitinp              0
- numrandom         10000
- tolerance          0.01
- zeropoint          0.00
- prepforconv           0
- xshift                0
- yshift                0
+ tunitinp                  0
+ numrandom             10000
+ tolerance              0.01
+ zeropoint              0.00
 
 # Catalog:
- xcol                  2
- ycol                  3
- fcol                  4
- rcol                  5
- ncol                  6
- pcol                  7
- qcol                  8
- mcol                  9
- tcol                 10
+ mode                    img
+ ccol                      2
+ ccol                      3
+ fcol                      4
+ rcol                      5
+ ncol                      6
+ pcol                      7
+ qcol                      8
+ mcol                      9
+ tcol                     10
 
 # WCS:
- crpix1                1
- crpix2                1
- crval1                1
- crval2                1
- resolution         0.03
+ crpix                   1,1
+ crval                   1,1
+ cdelt   0.03/3600,0.03/3600
+ pc                 -1,0,0,1
+ cunit               deg,deg
+ ctype     RA---TAN,DEC--TAN
