Configurable final dilation connectivity in NoiseChisel
Until now, NoiseChisel assumed maximum connectivity for the final dilation
(8), but in some cases, it may be desired to change it to 4. So with this
commit, NoiseChisel has the new `--dilatengb' option for this job.

--- a/bin/noisechisel/astnoisechisel.conf
+++ b/bin/noisechisel/astnoisechisel.conf
@@ -40,6 +40,7 @@
  detsnminarea       10
  detquant         0.95
  dilate              3
+ dilatengb           8
 
 # Segmentation
  segsnminarea       15
