--- a/bin/noisechisel/astnoisechisel.conf
+++ b/bin/noisechisel/astnoisechisel.conf
@@ -39,8 +39,7 @@
  dthresh           0.0
  detsnminarea       10
  detquant         0.95
- dilate              3
- dilatengb           8
+ detgrowquant     0.51
 
 # Segmentation
  segsnminarea       15
