NoiseChisel can now ignore some qthresh tiles
Until now, NoiseChisel would use all the tiles with a successful
measurement. As a result, if we had a region with a large diffuse signal,
the large diffuse signal would be treated like an elevated background and
effectively detected as sky.

From this commit onwards, NoiseChisel has a `--qthreshtilequant' option to
discard tiles above a given quantile.

--- a/bin/noisechisel/astnoisechisel.conf
+++ b/bin/noisechisel/astnoisechisel.conf
@@ -30,6 +30,7 @@
  mirrordist         1.5
  modmedqdiff       0.01
  qthresh            0.3
+ qthreshtilequant   1.0
  smoothwidth          3
  erode                2
  erodengb             4
