Checks for libtool in system added at configure time
The Gnuastro tarball ships with its own version of GNU Libtool (from
Gnulib) that is used for compiling and building the programs. So within the
build environment, libtool is recognized. However, if the user doesn't have
libtool, they will not be alerted and later when they want to use
BuildProgram, they will be confronted with an error and get confused: why
did `make check' pass, but I can't use it?

So now, at configure time, we check if the libtool executable is available
within the search path. If it isn't a warning will be printed and the `make
check' BuildProgram test will get skipped. However, if the user later
installs Libtool, they can use BuildProgram.

--- a/Makefile.am
+++ b/Makefile.am
@@ -190,7 +190,7 @@ check-local:
 	 echo "==================================================================="; \
 	 echo "==================================================================="; \
 	 echo "Your build of Gnuastro $(VERSION) didn't fail on any tests.";         \
-	 echo "To install Gnuastro, please run the commands below:";                 \
+	 echo "To install Gnuastro, please run the command(s) below:";               \
 	 echo;                                                                       \
 	 if [ ! -w $(prefix) ] ; then                                                \
 	  echo "(NOTE: As the user $$USER, you don't have writing permissions";      \
