Configure checks for libcurl for CFITSIO 3.42
Since version 3.42 (most recent as of this commit, released in August
2017), CFITSIO will link with libcurl also for using HTTPS addresses. If
libcurl isn't installed, then CFITSIO will just ignore it. So, on a system
that has libcurl, Gnuastro's configure script would fail (because CFITSIO
needs to link with libcurl).

With this commit, a check for libcurl is added before checking CFITSIO. If
it exists, then it will be linked with the CFITSIO check and if doesn't,
then CFITSIO won't need it either and we can continue.

This fixes bug #52152.

--- a/configure.ac
+++ b/configure.ac
@@ -148,6 +148,13 @@ AC_SEARCH_LIBS([cblas_sdsdot], [gslcblas], [],
     [AC_MSG_ERROR([GSL CBLAS not present, cannot continue.])])
 AC_SEARCH_LIBS([gsl_integration_qng], [gsl], [],
     [AC_MSG_ERROR([GSL not found, cannot continue.])])
+
+# Since version 0.42, if `libcurl' is installed, CFITSIO will link with it
+# and thus it will be necessary to explicitly link with libcurl also. If it
+# doesn't exist on the system, then CFITSIO won't link with it and there is
+# no problem for Gnuastro either. So there is no need to stop the configure
+# script if libcurl isn't found.
+AC_SEARCH_LIBS([curl_global_init], [curl], [], [])
 AC_SEARCH_LIBS([ffopen], [cfitsio], [],
     [AC_MSG_ERROR([CFITSIO not found, cannot continue.])])
 AC_SEARCH_LIBS([wcspih], [wcs], [],
