Cosmology functions moved into the library
Until now, Gnuastro's cosmology functions were only available with the
CosmicCalculator program. But these functions can be useful in many other
contexts (other future Gnuastro programs or for users of the library).

With this commit, these functions are now defined in the library and
available for easy usage.

This was done with the help of Boud Roukema.

This completes task #14665.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -50,11 +50,11 @@ libgnuastro_la_LIBADD = $(top_builddir)/bootstrapped/lib/libgnu.la
 
 
 # Specify the library .c files
-libgnuastro_la_SOURCES = arithmetic.c arithmetic-binary.c                  \
-  arithmetic-onlyint.c binary.c blank.c box.c checkset.c convolve.c data.c \
-  fits.c git.c interpolate.c list.c options.c permutation.c polygon.c      \
-  qsort.c dimension.c statistics.c table.c tableintern.c threads.c tile.c  \
-  timing.c txt.c type.c wcs.c
+libgnuastro_la_SOURCES = arithmetic.c arithmetic-binary.c               \
+  arithmetic-onlyint.c binary.c blank.c box.c checkset.c convolve.c     \
+  cosmology.c data.c fits.c git.c interpolate.c list.c options.c        \
+  permutation.c polygon.c qsort.c dimension.c statistics.c table.c      \
+  tableintern.c threads.c tile.c timing.c txt.c type.c wcs.c
 
 
 
@@ -66,13 +66,14 @@ libgnuastro_la_SOURCES = arithmetic.c arithmetic-binary.c                  \
 # in the $(headersdir) directory. Some of the header files don't need to be
 # installed.
 headersdir=$(top_srcdir)/lib/gnuastro
-pkginclude_HEADERS = gnuastro/config.h $(headersdir)/arithmetic.h          \
-  $(headersdir)/binary.h $(headersdir)/blank.h $(headersdir)/box.h         \
-  $(headersdir)/convolve.h $(headersdir)/data.h $(headersdir)/dimension.h  \
-  $(headersdir)/fits.h $(headersdir)/git.h $(headersdir)/interpolate.h     \
-  $(headersdir)/list.h $(headersdir)/permutation.h $(headersdir)/polygon.h \
-  $(headersdir)/qsort.h $(headersdir)/statistics.h $(headersdir)/table.h   \
-  $(headersdir)/threads.h $(headersdir)/tile.h $(headersdir)/txt.h         \
+pkginclude_HEADERS = gnuastro/config.h $(headersdir)/arithmetic.h         \
+  $(headersdir)/binary.h $(headersdir)/blank.h $(headersdir)/box.h        \
+  $(headersdir)/convolve.h $(headersdir)/cosmology.h $(headersdir)/data.h \
+  $(headersdir)/dimension.h $(headersdir)/fits.h $(headersdir)/git.h      \
+  $(headersdir)/interpolate.h $(headersdir)/list.h                        \
+  $(headersdir)/permutation.h $(headersdir)/polygon.h                     \
+  $(headersdir)/qsort.h $(headersdir)/statistics.h $(headersdir)/table.h  \
+  $(headersdir)/threads.h $(headersdir)/tile.h $(headersdir)/txt.h        \
   $(headersdir)/type.h $(headersdir)/wcs.h
 
 
