NoiseChisel can take image instead of doing convolution
When testing NoiseChisel's parameters for different datasets/analysis, it
is really troubling that usually, the single most time (and CPU) consuming
step is convolution. NoiseChisel now has a new `--convolved' option so the
user can specify the convolved image, thus telling NoiseChisel to read that
image instead of doing convolution.

--- a/bin/noisechisel/astnoisechisel.conf
+++ b/bin/noisechisel/astnoisechisel.conf
@@ -18,13 +18,14 @@
 # warranty.
 
 # Input:
- khdu                1
- wkhdu               1
- minskyfrac        0.7
- minnumfalse       100
+ khdu                 1
+ wkhdu                1
+ convolvedhdu         1
+ minskyfrac         0.7
+ minnumfalse        100
 
 # Tessellation
- largetilesize 200,200
+ largetilesize  200,200
 
 # Detection:
  mirrordist         1.5
