--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -51,6 +51,11 @@ endif
 if COND_HASGNULIBTOOL
   MAYBE_HASGNULIBTOOL = "yes"
 endif
+if COND_NO_CPP_QUNUSED_ARGUMENTS_PROBLEM
+  MAYBE_VERSIONCPP    = versioncpp
+  MAYBE_VERSIONCPP_SH = lib/versioncpp.sh
+  versioncpp_SOURCES  = lib/versioncpp.cpp
+endif
 if COND_ARITHMETIC
   MAYBE_ARITHMETIC_TESTS = arithmetic/snimage.sh arithmetic/onlynumbers.sh \
   arithmetic/where.sh arithmetic/or.sh
@@ -172,11 +177,9 @@ endif
 
 
 
-
-
-# `config.h' is built by `../lib/Makefile.am' and is only meant for
-# outside users (internally `config.h' has everything. Thus, we need to add
-# it to the include directories of the test programs in this directory.
+# `config.h' is built by `../lib/Makefile.am' and is only meant for outside
+# users (internally `config.h' has everything). Thus, we need to add it to
+# the include directories of the test programs in this directory.
 AM_CPPFLAGS = -I../lib
 
 
@@ -205,8 +208,7 @@ export hasghostscript=$(MAYBE_HASGHOSTSCRIPT);
 # `TESTS'. So they do not need to be specified as any dependency, they will
 # be present when the `.sh' based tests are run.
 LDADD = -lgnuastro
-check_PROGRAMS = versioncpp multithread
-versioncpp_SOURCES = lib/versioncpp.cpp
+check_PROGRAMS = multithread $(MAYBE_VERSIONCPP)
 multithread_SOURCES = lib/multithread.c
 lib/multithread.sh: mkprof/mosaic1.sh.log
 
@@ -215,7 +217,7 @@ lib/multithread.sh: mkprof/mosaic1.sh.log
 
 # Final Tests
 # ===========
-TESTS = prepconf.sh lib/versioncpp.sh lib/multithread.sh                   \
+TESTS = prepconf.sh lib/multithread.sh $(MAYBE_VERSIONCPP_SH)              \
   $(MAYBE_ARITHMETIC_TESTS) $(MAYBE_BUILDPROG_TESTS)                       \
   $(MAYBE_CONVERTT_TESTS) $(MAYBE_CONVOLVE_TESTS) $(MAYBE_COSMICCAL_TESTS) \
   $(MAYBE_CROP_TESTS) $(MAYBE_FITS_TESTS) $(MAYBE_MKCATALOG_TESTS)         \
