Installed libgnuastro.la doesn't have local -L dirs
Until now, the `libgnuastro.la' file had the the two `-L../lib' and
`-L../../lib' directories in its `dependency_libs' variable. These are only
necessary during installation. Afterwards, they can cause undefined
behavior if such directories really exist when the user uses this file
(particularly in BuildProgram).

With this commit, these two directories are removed from the installed
`libgnuastro.la' file in the end of the library installation directory.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -49,14 +49,13 @@ libgnuastro_la_LIBADD = $(top_builddir)/bootstrapped/lib/libgnu.la
 
 
 
+
 # Specify the library .c files
 libgnuastro_la_SOURCES = arithmetic.c arithmetic-binary.c               \
   arithmetic-onlyint.c binary.c blank.c box.c checkset.c convolve.c     \
   cosmology.c data.c fits.c git.c interpolate.c list.c options.c        \
   permutation.c polygon.c qsort.c dimension.c statistics.c table.c      \
   tableintern.c threads.c tile.c timing.c txt.c type.c wcs.c
-
-
 
 
 
@@ -150,3 +149,13 @@ gnuastro.pc: Makefile $(srcdir)/gnuastro.pc.in
 	'$(srcdir)/$@.in' >> $@.tmp
 	chmod a-w $@.tmp
 	mv $@.tmp $@
+
+
+
+
+
+# Remove the two local directories we needed during installation
+install-exec-hook:
+	$(SED) -e 's/ -L..\/lib//g' -e 's/ -L..\/..\/lib//g'       \
+	       $(libdir)/libgnuastro.la > libgnuastro.la_tmp
+	mv libgnuastro.la_tmp $(libdir)/libgnuastro.la
